# ccutils

./: .clang-format  CMakeLists.txt  README.md  anotator.cpp  genTest.cpp  pepa.cpp
codegen/: Assembler.h  BinaryOutput.cpp  BinaryOutput.h  BlockId.h  CFGPatcher.h  CMakeLists.txt  CodeBlock.h  CodeGen.h  CodeGenImpl.h  ControlFlowGraph.h  IRGen.h  IRGenCtx.h  IRInstruction.h  IRInstructions.h  InstructionMatcher.hpp  JumpCondType.h  LiveRanges.h  SSARegister.h  SSARegisterHandle.cpp  SSARegisterHandle.h  StackAllocator.h  forward.h  optimizations.h
codegen/allocators/: Allocator.h  BetterAllocator.h  NewAllocator.h  OtherAllocator.h  SimpleAllocator.h
codegen/llvm/: LLVMAssembler.h  llvm_toy.cpp
codegen/transformations/: spillStage.h
codegen/x86/: RegAlloc.cpp  RegAlloc.h  X86Assembler.cpp  X86Assembler.h  decomposeStage.h  emit_x86.h  x86IR.cpp  x86IR.h  x86_insts.h
codegen/x86/ir/: Block.h  Graph.h  GraphColoring.hpp  Lower.h  Registers.hpp  X86Instruction.cpp  X86Instruction.hpp  emit_x86.h  forward.hpp  instructions.hpp  print_utils.h  ranges.hpp
gen64/: CMakeLists.txt  Register.h  X86mc.cpp  X86mc.h  definitions.cpp  definitions.h  elf.h  linking.h
lexing/: CMakeLists.txt  LexingUnit.h  Position.h  SourceProvider.h  Token.h  forward.h  lexerExceptions.h  lexingUnits.h  tokenize.h
parsing/: CMakeLists.txt  Parser.h  ParsingUnit.h  TokenProvider.h  exceptions.h  forward.h
utils/: BetterArray.h  BetterOption.h  BetterSpan.h  CMakeLists.txt  CopyPtr.h  Debuggable.h  Errorable.h  InitVar.h  Logger.h  Result.h  StringLiteral.h  Variant.h  VirtualCopy.h  arch.h  code_gen.h  dispatch.h  lips.h  logging.h  pdo_utils.h  string_hash.h  stringify.h  utils.h
